[package]
name = "stegaudio"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bincode = "2.0.1"
clap_derive = {version = "4.5.41"}
clap =  {version = "4.5.41", features = ["derive"]}
serde = {version = "1.0.228", features = ["derive"]}
rust-lzma = "0.6.0"
chacha20poly1305 = "0.10.1"
sha2 = "0.10.9"
rpassword = "7.4.0"

[profile.dev]
debug-assertions = false
